[package]
name = "rust-gqls"
version = "0.1.0"
authors = ["ikeikeikeike <jp.ne.co.jp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^3.3"
actix-cors = "^0.5"

juniper = "^0.14"
# juniper = "^0.15.1"
# juniper_codegen = "^0.15.1"
# juniper-from-schema = "^0.5.2"
# juniper-from-schema = { git = "https://github.com/davidpdrsn/juniper-from-schema" }
# juniper-from-schema-code-gen = "^0.5.2"
# juniper-eager-loading = "^0.5.1"
# juniper-eager-loading-code-gen = "^0.5.1"

dotenv = "^0.15"
env_logger = "^0.8"
log = "^0.4"

serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"

uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "^0.4"
# numeric = "^0.1.4"

diesel = { version = "^1.4", features = ["mysql", "r2d2", "chrono", "numeric"] }

mysql = "^20.1"
r2d2 = "^0.8"
# r2d2_mysql = "^18.0"

anyhow = "^1.0"
either = "^1.6"
failure = "^0.1"
fallible-iterator = "^0.2"
futures = "^0.3"
itertools = "^0.9"
itertools-num = "^0.1"
thiserror = "^1.0"
